# bonescript

./: CMakeLists.txt  README.md
bonescript-runtime/src/: main.c
bonescript-tests/code/: print.bs  test-lexer.bs  test-parser.bs
bonescript-tests/src/: main.c
bonescript-tests/src/utils/: print_ast.c  print_ast.h
bonescript/include/bonescript/: bonescript.h  error.h
bonescript/src/: bonescript.c
bonescript/src/ast/: ast.h
bonescript/src/bonescript/: bonescript.c
bonescript/src/bonescript/ast/: ast.c  ast.h  parser.c  parser.h  print_ast.c
bonescript/src/bonescript/error/: error.c  error.h  error_internal.h
bonescript/src/bonescript/lexer/: lexer.c  lexer.h  token.c  token.h
bonescript/src/bonescript/visitor/: function.h  import.c  import.h  scope.c  scope.h  variable.c  variable.h  visitor.c  visitor.h
bonescript/src/lexer/: lexer.c  lexer.h  token.c  token.h
